--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -9,7 +9,7 @@
 	<script src="/js/jquery-1.10.2.min.js"></script>
 	<script src="/js/jquery.mobile-1.4.0.min.js"></script>
 	<style id="collapsible-list-item-style-flat">
-	<title>Ncwitter</title>
+	<title>Supper Cwitter</title>
 		.ui-li-static.ui-collapsible > .ui-collapsible-heading {
 			margin: 0;
 		}
